2010-08-25  Emanuel Schuetze <emanuel@intevation.de>

	* manual/gpg4win-compendium-de.tex: Some minor fixes and code restructur changes.

	* manual/gpg4win-compendium-en.tex: First formal review. (Needs a technical review.)

2010-08-17  Emanuel Schuetze <emanuel@intevation.de>

	* manual/*.png, manual/Makefile.am: Moved to images-compendium, images-manual and
	images-hyperlatex. Grouped for better handling different, 
	multi-language documentation.
	
	* manual/gpg4win-compendium-de.tex,
	manual/macros-en.tex, manual/macros.tex,
	manual/durchblicker.tex, manual/novices.tex,
	manual/einsteiger.tex: Changed image path.

	* manual/gpg4win-compendium-en.tex: Added English translation of
	compendium by Brigitte Hamilton.
	* manual/version.tex.in: Added English version number and date.

2010-08-16  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor. Remove links (needs decision of the community).

2010-07-29  Emanuel Schuetze <emanuel@intevation.de>

	* website/package-integrity.htm4, website/index.htm4,
	website/newsarchive.htm4, website/newsarchive-de.htm4,
	website/package-integrity-de.htm4, website/index-de.htm4,
	website/NEWS.last: Update for 2.0.4.
	* website/index.htm4, website/index-de.htm4: Add 2.0.4
	announcement.

2010-07-28  Emanuel Schuetze <emanuel@intevation.de>

	* website/versions.m4, website/NEWS.last: Update for 2.0.4 release.

2010-07-21  Emanuel Schuetze <emanuel@intevation.de>

	* README.pt.txt: Add readme file for Portuguese. Needs translation.
	
	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2010-07-19  Emanuel Schuetze <emanuel@intevation.de>

	* website/donate.htm4, website/donate-de.htm4: Add new sponsor.

2010-07-15  Emanuel Schuetze <emanuel@intevation.de>

	* logo/gpg4win-msi-header_install-493x58.bmp,
	logo/gpg4win-msi-header_uninstall-493x58.bmp,
	logo/gpg4win-msi-header_install-uninstall-493x58.xcf,
	logo/gpg4win-msi-wizard_install-493x312.bmp,