@@ -4,6 +4,8 @@
 
 	* manual/gpg4win-compendium-en.tex: First formal review. (Needs a technical review.)
 
+	* Makefile.am: Added new English compendium. Removed old English novices manual.
+
 2010-08-17  Emanuel Schuetze <emanuel@intevation.de>
 
 	* manual/*.png, manual/Makefile.am: Moved to images-compendium, images-manual and
